k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nf-processor-service
  namespace: nf-processor
spec:
  selector:
    app: nf-processor
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
